retrieveUnpackaged/objects/License_Verification__c.object
<CustomObject>
    <description>This is used to store license verification records.</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the contact related to the license verification</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Verification</relationshipLabel>
        <relationshipName>License_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This is the where the out of state license is held.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Number__c</fullName>
        <description>This is the users credential number.</description>
        <label>Credential Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>This is the credential type that the holder has.</description>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This is the credential that is being held.</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This is the expiration date of the license from out of state.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the license that the license verification record is linked to.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>License Verification</relationshipLabel>
        <relationshipName>License_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This is the where the out of state license is held.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is the status of the license.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Verification_Status</valueSetName>
        </valueSet>
    </fields>
    <label>License Verification</label>
    <nameField>
        <displayFormat>LVF-{000000}</displayFormat>
        <label>License Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Verification</pluralLabel>
    <recordTypes>
        <fullName>Default_License_Verification</fullName>
        <active>true</active>
        <label>Default License Verification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>